# SIGUELO_SERVICE

./: .gitignore  README.md  pyproject.toml
src/siguelo_service/: __init__.py  helpers.py  scripts.py  service.py  turnstile.py
src/siguelo_service/applications/: get_download_error.py  get_monto_devolucion.py  helpers.py  search_titulo.py  take_screenshot.py
src/siguelo_service/applications/get_data/: get_anotacion.py  get_asientos_tives.py  get_numeros_partida.py  validators.py
src/siguelo_service/applications/get_info/: command.py  from_row.py  from_row_publicidad.py  get_extra_info.py
src/siguelo_service/entities/: exceptions.py  siguelo_entities.py  types.py
src/siguelo_service/models/: dataclasses.py  title.py
tests/: conftest.py  test_siguelo.py.example
