[project]
name = "siguelo_service"
version = "0.2.4"
description = "Un proyecto RPA con PDM"
authors = [{"name"= "Leonardo"}]

dependencies = [
    "patchright==1.56",
    "pydantic~=2.12",
    "retry~=0.9",
    "loguru~=0.7"
]

requires-python = ">=3.10, <3.14"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest~=9.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.mypy]
ignore_missing_imports = true

[tool.importlinter]
root_package = "siguelo_service"

[[tool.mypy.overrides]]
module = ["twocaptcha.*", "pytesseract.*", "thefuzz.*", "google_auth_oauthlib.flow.*", "pygsheets.*"]
ignore_missing_imports = true

[tool.pdm]
distribution = true
# By default, PDM assumes your package has the same name as the project and lives in the root or in a folder matching that name.
# package-dir = "src" tells PDM: “look for all Python packages inside the src/ directory instead of the root”.
# This is useful when you want a custom folder structure or a different package name, and it avoids accidental imports from the repo root during development or testing.
package-dir = "src"

[project.scripts]
run-bot = "siguelo_service.__main__:main"